tab-models_detailed: remove caption

--- a/src/tables/models_detailed.tex
+++ b/src/tables/models_detailed.tex
@@ -43,10 +43,7 @@
       TaylorAI/GTE-tiny & 6 & 384 & 1536 & 12 & 384 & 512 & 31K & 23M \\
       \bottomrule
     \end{tabular}
-    \caption{\textbf{Details on model sizes.}
-            We show the number of layers $L$, the number of hidden states of the model $H_{m}$, the dimension of the feed-forward layer $H_{ff}$, the number of attention heads $A$, the dimension of output embedding $D$, the size of the vocabulary $V$ and the total number of parameters $N_p$. 
-            For Transformer encoders, the number of parameters can be approximated by $4LH_m^2 + 2LH_m H_{ff} + VH_m$.
-            While this table gives more hindsight on the difference of capacity of each model, note it does not highlight other critical differences between the models.}
+    \caption{Details on model sizes.}
     \label{tab:parameters}
   \end{table*}
   
