models_detailed add fasttext (diacritics and diacriticless)

--- a/src/appendix_A.tex
+++ b/src/appendix_A.tex
@@ -20,7 +20,7 @@ This table includes the following parameters for each model
         This parameter indicates the maximum number of tokens a model can process within a single input sequence.
         Models with a larger $T_{max}$ can handle longer text inputs without requiring truncation.
     \item \textbf{Vocabulary Size ($V$)}:
-        This represents the total number of unique tokens the model's vocabulary encompasses.
+        This represents the total number of unique words (tokens) the model's vocabulary encompasses.
     \item \textbf{Total Number of Parameters ($N_p$)}:
         This denotes the total number of trainable parameters within the model.
         A larger number of parameters typically indicates a more complex model with greater capacity, but also higher computational demands.
