--- a/src/tables/models_detailed.tex
+++ b/src/tables/models_detailed.tex
@@ -4,6 +4,9 @@
       \toprule
       \textbf{Model} & $L$ & $H_m$ & $H_{ff}$ & $A$ & $D$ & $T_{max}$ & $V$ & $N_p$ \\
       \midrule
+      FastText\textsubscript{diacritics} & - & - & - & - & 300 & - & 800K & 240M \\
+      FastText\textsubscript{diacriticless} & - & - & - & - & 300 & - & 762K & 229M \\
+      \midrule
       Czert-B & 12 & 768 & 3072 & 12 & 768 & 512 & 31K & 110M \\
       RetroMAE-Small & 12 & 256 & 1024 & 4 & 256 & 512 & 58K & 24M \\
       Dist-MPNet-ParaCrawl & 12 & 256 & 1024 & 4 & 256 & 512 & 58K & 24M \\
