evaluation: add diacriticless and diacritics fasttext

--- a/src/tables/evaluation.tex
+++ b/src/tables/evaluation.tex
@@ -6,7 +6,8 @@
       \midrule
       \multicolumn{6}{c}{BASELINE} \\
       \hline
-      FastText & 0.8304 & 0.2899 & 0.832 & 0.302 & 240M \\
+      FastText\textsubscript{diacritics} & 0.8304 & 0.2899 & 0.8110 & 0.2923 & 240M \\
+      FastText\textsubscript{diacriticless} & 0.8331 & 0.2864 & 0.8320 & 0.3020 & 229M \\
       \hline
       \multicolumn{6}{c}{CZECH MODELS} \\
       \hline
