--- a/src/appendix_A.tex
+++ b/src/appendix_A.tex
@@ -1,3 +1,7 @@
+%!TEX root = ../main.tex
+
+\chapter{Appendix A} \label{chap:appendix_A}
+
 \reftab{tab:parameters} presents a comparison of the architectural characteristics of the evaluated text embedding models.
 This table includes the following parameters for each model
 
