methodology: Add appendix reference

--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -123,6 +123,9 @@ This selection encompasses three distinct categories:
 To ensure transparency, reproducibility, and foster community development, this study will exclusively evaluate open-source text embedding models.  Furthermore, to prioritize computational efficiency and applicability to our research setting, we will restrict our evaluation to models with a parameter size of less than 1 billion.
 In cases where a model suite offers both monolingual and multilingual versions, we will prioritize the multilingual version for evaluation. This choice aligns with our focus on tasks that may involve processing text data in multiple languages, including Czech.
 
+For a comprehensive overview of the chosen models' architectural details, please refer to Appendix~\ref{chap:appendix_A}.
+This appendix provides a more in-depth examination of the specific configurations employed by each model.
+
 % Czech models
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Czert
